--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.0",
+    "@tailwindcss/cli": "^4.1.16",
+    "@tailwindcss/postcss": "^4.1.16",
     "clsx": "^2.0.0",
     "framer-motion": "^9.0.3",
     "husky": "^8.0.3",
@@ -38,9 +40,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.5.6",
     "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "4.8.4"
   },
   "lint-staged": {
